--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "An Ethereum Marketplace",
   "author": "gregory@dappuniversity.com",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^5.15.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -14,9 +17,9 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
-    "react": "16.8.4",
+    "react": "^18.3.1",
     "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.4",
+    "react-dom": "^18.3.1",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
@@ -35,5 +38,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.26.7",
+    "@babel/preset-react": "^7.26.3"
+  }
 }
