--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^5.15.0",
     "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
@@ -40,6 +39,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/core": "^7.26.7",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.26.3"
